Disable Dream (VR).
Test: atest android.server.wm.DreamManagerServiceTests
Bug: 209717745
Change-Id: I34067de23209b3e821bb35f183dcd97d10fc434f
(cherry picked from commit 0339bd8e769fafa4b0ffb9195eb277eff13babcd)

--- a/pc/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/pc/overlay/frameworks/base/core/res/res/values/config.xml
@@ -17,4 +17,6 @@
 <resources>
     <!-- Disabling content capture service by setting an empty string here -->
     <string name="config_defaultContentCaptureService" translatable="false"></string>
+    <!-- Disable Dream (VR) -->
+    <bool name="config_dreamsSupported">false</bool>
 </resources>
