Disable split screen for Kingyo
Bug: 223690856
Test: None
Change-Id: I13eeddd090dda01c5ebbe97830369b9f7bb1be30
Merged-In: I13eeddd090dda01c5ebbe97830369b9f7bb1be30
(cherry picked from commit 1624d0dcb7df2c33a10aa45507494fe9023a0fd9)

--- a/pc/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/pc/overlay/frameworks/base/core/res/res/values/config.xml
@@ -19,4 +19,6 @@
     <string name="config_defaultContentCaptureService" translatable="false"></string>
     <!-- Disable Dream (VR) -->
     <bool name="config_dreamsSupported">false</bool>
+    <!-- Disable split screen b/183906779 -->
+    <bool name="config_supportsSplitScreenMultiWindow">false</bool>
 </resources>
