--- a/pc/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/pc/overlay/frameworks/base/core/res/res/values/config.xml
@@ -21,4 +21,6 @@
     <bool name="config_dreamsSupported">false</bool>
     <!-- Disable split screen b/183906779 -->
     <bool name="config_supportsSplitScreenMultiWindow">false</bool>
+    <!-- Disable quick settings b/240884945 -->
+    <bool name="config_quickSettingsSupported">false</bool>
 </resources>
