--- a/overlay/packages/services/Telephony/res/values/config.xml
+++ b/overlay/packages/services/Telephony/res/values/config.xml
@@ -17,9 +17,12 @@
 <!-- Phone app resources that may need to be customized
      for different hardware or product builds. -->
 <resources>
-      <!-- String indicating the package name of the device ImsService implementation for MMTEL. -->
+    <!-- String indicating the package name of the device ImsService implementation for MMTEL. -->
     <string name="config_ims_mmtel_package" translatable="false">org.codeaurora.ims</string>
 
     <!-- String indicating the package name of the device ImsService implementation for RCS. -->
     <string name="config_ims_rcs_package" translatable="false">com.android.service.ims</string>
+
+    <!-- String indicating the package name of the vendor satellite service implementation -->
+    <string name="config_satellite_service_package" translatable="false">com.google.android.telephony.satellite</string>
 </resources>
